data/all_generated_tests/raw_wast_tests/block_InvalidorInconsistentControlFlowGraph_2439.wast
;; 10. **Test for Block with Branch Table Misalignment**:    - Devise a block containing a `br_table` with an index that incorrectly maps to a non-existent or the wrong function, testing the implementation of break tables.    - Constraint: Branch table handling inside blocks.    - CFG Impact: Misaligned CFG due to incorrect break table mapping, resulting in unreachable branches.

(assert_invalid
  (module (func $block-with-br_table-misalignment (result i32)
    (block (result i32)
      (i32.const 1)
      (br_table 0 1 2)
    )
  ))
  "type mismatch"
)